--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(marg_alt_g)
 export(marg_alt_gl)
 export(marg_f1_g4)
+export(marg_f1_g4_pknown)
 import(Rcpp)
 import(methods)
 importFrom(rstan,sampling)
