--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(marg_alt_g)
 export(marg_alt_gl)
 export(marg_f1_g4)
 export(marg_f1_g4_pknown)
+export(marg_f1_gl4)
 import(Rcpp)
 import(methods)
 importFrom(rstan,sampling)
