--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,11 @@ export(marg_alt_gl)
 export(marg_f1_g4)
 export(marg_f1_g4_pknown)
 export(marg_f1_gl4)
+export(offspring_geno)
+export(offspring_gf)
+export(pp_marg_f1_g4_pknown)
+export(pp_marg_f1_gl4)
+export(pvec)
 import(Rcpp)
 import(methods)
 importFrom(rstan,sampling)
