make names consistent, work on docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,17 @@
 
 export(marg_alt_g)
 export(marg_alt_gl)
-export(marg_f1_g4)
-export(marg_f1_g4_pknown)
+export(marg_f1_dr_npp_g4)
+export(marg_f1_dr_npp_gl4)
+export(marg_f1_dr_pp_g4)
+export(marg_f1_dr_pp_gl4)
+export(marg_f1_dr_pp_glpknown4)
+export(marg_f1_ndr_npp_g4)
+export(marg_f1_ndr_npp_gl4)
+export(marg_f1_ndr_pp_g4)
+export(marg_f1_ndr_pp_gl4)
 export(offspring_geno)
 export(offspring_gf)
-export(pp_marg_f1_g4_pknown)
 export(pvec)
 import(Rcpp)
 import(methods)
