--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(marg_f1_ndr_pp_gl4)
 export(marg_f1_ndr_pp_glpknown4)
 export(offspring_geno)
 export(offspring_gf)
+export(po_gl)
 export(pvec)
 import(Rcpp)
 import(methods)
