--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,5 +23,7 @@ export(po_gl)
 export(pvec)
 import(Rcpp)
 import(methods)
+importFrom(RcppParallel,CxxFlags)
 importFrom(rstan,sampling)
+importFrom(rstantools,rstan_config)
 useDynLib(menbayes, .registration = TRUE)
