--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,4 +26,4 @@ import(methods)
 importFrom(RcppParallel,CxxFlags)
 importFrom(rstan,sampling)
 importFrom(rstantools,rstan_config)
-useDynLib(menbayes, .registration = TRUE)
+useDynLib(menbayesAlpha, .registration = TRUE)
